<resources>
    <string name="app_name">RcsClient</string>
    <string name="provisioning_test">Provisioning Test</string>
    <string name="delegate_test">Delegate Test</string>
    <string name="uce_test">UCE Test</string>
    <string name="gba_test">GBA Test</string>
    <string name="test_msg_client">TestMessageClient</string>
    <string name="db_client">DBClient</string>
    <string name="result">Result:</string>
    <string name="callback_result">Callback Result:</string>
    <string name="initialize_delegate">initializeSipDelegate</string>
    <string name="destroy_delegate">destroySipDelegate</string>
    <string name="uce_description">Enter the number to query capability and separate by \',\' if
        multiple ones.</string>
    <string name="number">Number: </string>
    <string name="request_capability">requestCapability</string>
    <string name="request_availability">requestNetworkAvailability</string>
    <string name="gba_bootstrap">bootstrapAuthenticationRequest</string>
    <string name="start_chat">Start Chat</string>
    <string name="to">To:</string>
    <string name="chat_message">Chat Message</string>
    <string name="send">Send</string>
    <string name="ok">OK</string>
    <string name="session_succeeded">Session init succeeded</string>
    <string name="session_failed">Session init failed</string>
    <string name="session_not_ready">Session not ready</string>
    <string name="organization">Organization:</string>
    <string name="uicc_type">UICC Type:</string>
    <string name="protocol">Protocol:</string>
    <string name="tls_cs">TLS Cipher Suite:</string>
    <string name="naf">NAF URI:</string>
    <string name="standalone_pager">Standalone Pager</string>
    <string name="standalone_large">Standalone Large</string>
    <string name="standalone_deferred">Standalone Deferred</string>
    <string name="standalone_pager_large">Standalone Large Pager</string>
    <string name="chat">Chat</string>
    <string name="file_transfer">File Transfer</string>
    <string name="geolocation_sms">Geolocation SMS</string>
    <string name="chatbot_session">Chatbot Session</string>
    <string name="chatbot_standalone">Chatbot Standalone</string>
    <string name="chatbot_version">Chatbot Version</string>
    <string name="provisioning_done">Provisioning Done</string>
    <string name="registration_done">Registration Done</string>

    <string-array name="organization">
        <item>NONE</item>
        <item>3GPP</item>
        <item>3GPP2</item>
        <item>OMA</item>
        <item>GSMA</item>
        <item>LOCAL</item>
    </string-array>
    <string-array name="protocol">
        <item>SUBSCRIBER_CERTIFICATE</item>
        <item>MBMS</item>
        <item>HTTP_DIGEST_AUTH</item>
        <item>3GPP_HTTP_BASED_MBMS</item>
        <item>GENERIC_PUSH_LAYER</item>
        <item>IMS_MEDIA_PLANE</item>
        <item>GENERATION_TMPI</item>
        <item>3GPP_HTTP_BASED_MBMS</item>
        <item>TLS_DEFAULT</item>
        <item>TLS_BROWSER</item>
    </string-array>
    <string-array name="uicc_type">
        <item>UNKNOWN</item>
        <item>SIM</item>
        <item>USIM</item>
        <item>RSIM</item>
        <item>CSIM</item>
        <item>ISIM</item>
    </string-array>

</resources>
