<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DelegateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/standalone-pager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standalone_pager" />

                <CheckBox
                    android:id="@+id/standalone-large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standalone_large" />

                <CheckBox
                    android:id="@+id/standalone-deferred"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standalone_deferred" />

                <CheckBox
                    android:id="@+id/standalone-pager-large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standalone_pager_large" />

                <CheckBox
                    android:id="@+id/chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/file_transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_transfer" />

                <CheckBox
                    android:id="@+id/geolocation_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geolocation_sms" />

                <CheckBox
                    android:id="@+id/chatbot_session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chatbot_session" />

                <CheckBox
                    android:id="@+id/chatbot_standalone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chatbot_standalone" />

                <CheckBox
                    android:id="@+id/chatbot_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chatbot_version" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/init_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/initialize_delegate"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/destroy_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/destroy_delegate"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/delegate_callback_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:scrollbars="vertical"
            android:text="@string/callback_result"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>