<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/provision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provisioning_test"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/delegate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delegate_test"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/uce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uce_test"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/gba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gba_test"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/msgClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_msg_client"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/version_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_info"
            android:textAlignment="center"
            android:paddingTop="7dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
